--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
-
 {
   "name": "drop-watch",
   "version": "1.2.0",
   "private": true,
-  "engines": { "node": ">=18" },
+  "engines": { "node": "18.x" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +15,7 @@
     "wagmi": "^2.6.0",
     "viem": "^2.9.0",
     "@rainbow-me/rainbowkit": "^2.0.3",
-    "@alch/alchemy-sdk": "^2.10.0",
+    "@alch/alchemy-sdk": "^2.8.3",
     "@upstash/redis": "^1.34.0",
     "@sentry/nextjs": "^8.0.0"
   }
