--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "drop-watch",
   "version": "1.2.0",
   "private": true,
-  "engines": { "node": "24.x" },
+  "engines": {
+    "node": "24.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.0.3",
+    "@sentry/nextjs": "^8.0.0",
+    "@upstash/redis": "^1.34.0",
+    "alchemy-sdk": "^3.6.5",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^2.6.0",
     "viem": "^2.9.0",
-    "@rainbow-me/rainbowkit": "^2.0.3",
-    "alchemy-sdk": "^3.0.0",
-    "@upstash/redis": "^1.34.0",
-    "@sentry/nextjs": "^8.0.0"
+    "wagmi": "^2.6.0"
+  },
+  "devDependencies": {
+    "@types/react": "19.2.7"
   }
 }
