--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.0.3",
     "@sentry/nextjs": "^8.0.0",
     "@upstash/redis": "^1.34.0",
+    "@vercel/speed-insights": "^1.3.1",
     "alchemy-sdk": "^3.6.5",
     "next": "14.1.0",
     "react": "18.2.0",
